Remove text-align on App.css + fix rendering of right menu on editor focus

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
   display: flex;
   height: 100%;
 }
